# ChangeLog for dev-java/junit
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.34 2007/11/15 13:16:23 betelgeuse Exp $

  15 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> -junit-3.8.2.ebuild:
  Delete old ebuild.

*junit-3.8.2-r1 (27 Apr 2007)

  27 Apr 2007; Vlastimil Babka <caster@gentoo.org>
  files/junit-3.8.2-build.xml, -junit-3.8.1-r1.ebuild, junit-3.8.2.ebuild,
  +junit-3.8.2-r1.ebuild:
  Revbump that depends on split-ant and stops symlinking to
  /usr/share/ant-core/lib; Also don't generate javadoc without USE=doc.

  24 Nov 2006; Markus Rothe <corsair@gentoo.org> junit-3.8.1-r3.ebuild:
  Stable on ppc64; bug #155261

  23 Nov 2006; <blubb@gentoo.org> junit-3.8.1-r3.ebuild:
  stable on amd64

  18 Nov 2006; nixnut <nixnut@gentoo.org> junit-3.8.1-r3.ebuild:
  Stable on ppc wrt bug 155261

  16 Nov 2006; Andrej Kacian <ticho@gentoo.org> junit-3.8.1-r3.ebuild:
  Stable on x86, bug #155261.

  15 Nov 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/junit-3.8.2-build.xml:
  Add junit-3.8.2-build.xml to fix bug 155194.

*junit-3.8.2 (15 Nov 2006)

  15 Nov 2006; William L. Thomson Jr. <wltjr@gentoo.org>
  +junit-3.8.2.ebuild:
  Revision bump, moved ebuild from overlay.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> junit-3.8.1-r1.ebuild,
  junit-3.8.1-r3.ebuild:
  Dropping sparc keywords, see #96229

  10 Sep 2006; Joshua Nichols <nichoj@gentoo.org> junit-3.8.1-r3.ebuild:
  Keyworded ~ia64

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> junit-3.8.1-r3.ebuild:
  Add ~x86-fbsd keyword.

*junit-3.8.1-r3 (22 Jul 2006)

  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> -junit-3.8.1-r2.ebuild,
  +junit-3.8.1-r3.ebuild:
  Add java-ant-2.

*junit-3.8.1-r2 (21 Jul 2006)

  21 Jul 2006; Joshua Nichols <jnichols@gentoo.org> +junit-3.8.1-r2.ebuild:
  Revision bump to use new Java system.

  02 Aug 2005; Petteri Räty <betelgeuse@gentoo.org> junit-3.8.1-r1.ebuild: