@@ -1,5 +1,7 @@
 AUX junit-3.8.2-build.xml 3179 RMD160 218ac28d9c167b719f6ace32479dd559b3ed010e SHA1 e4f2e9076f93c2700e096f05a426402cb7730ad3 SHA256 ab78187535ef97b9984d969f313aff39944efbb57427071a8851f973dedf9042
 DIST junit3.8.2.zip 461426 RMD160 c66d64d8aa738460490e62fd332c112076d9b662 SHA1 701578302e244e5173dca3040cce0774a5c39645 SHA256 aae23d20e6f4dc45b4bf0b10fedcbd209c100342a0cafce1aa07d2da6da1f24a
-EBUILD junit-3.8.2-r1.ebuild 1137 RMD160 336bd93ea053b1176602c617c8129e2283ee69ef SHA1 aa431ead4baa1588795a4a8744776ab73812f36d SHA256 e658bb440e19a2694ad3fcc0f9e522b756cc9bad11e5760e9cf222eff508904c
-MISC ChangeLog 5013 RMD160 7b8a638d5ee2b838a1ca3a033b3d672f12885c08 SHA1 6cbb05e395cdcd855b35f2d96cd7a9e175658cef SHA256 4958dace44934761564482ce233040435bb80694b06c110f421ec69f0ea86a63
+DIST junit4.4.zip 813114 RMD160 915d20222030f5678a2d74cf07080a305c0c1407 SHA1 83be34288bf8e595a6eb5a1de9c6cd96042d8c32 SHA256 9bbe7c16b122acd9d918d86ddab8b77836ffb03f9ceb2f0379be653fdc738b6d
+EBUILD junit-3.8.2-r1.ebuild 1155 RMD160 5c0caef5bf24e0b552af59c5ceb2ff4b6eddde68 SHA1 01d6daf457c2d726b5891af68e9c37419e824d16 SHA256 f5afb718d7a1f8486fd38dacaead62c5a22d0f21745659f6c2edbd66d85d9852
+EBUILD junit-4.4-r1.ebuild 2230 RMD160 fa8029341fd0437537038c4ff9690fbe3daf3f2b SHA1 e8f6c06c4a5f980174a8147e098dd3c914c0f60a SHA256 7303cbeb6f6c90816203576ef0f4e6b01ab2fcfba8db2a04da0ea58a6a4a84d1
+MISC ChangeLog 5257 RMD160 9f5fd64fd7530a45cd76206af31b6438922df175 SHA1 898f3a3bd10657ad7354e289ebb442e73d73e0e8 SHA256 d68959af89e32b3132b33f9ef10a2b4b9253f1cbad33b8bfddb7b61a5bd54779
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
