@@ -1,6 +1,13 @@
 # ChangeLog for dev-java/junit
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.34 2007/11/15 13:16:23 betelgeuse Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.35 2008/01/11 09:48:56 caster Exp $
+
+*junit-4.4 (11 Jan 2008)
+
+  11 Jan 2008; Vlastimil Babka <caster@gentoo.org> junit-3.8.1-r3.ebuild,
+  +junit-4.4-r1.ebuild:
+  Version bump, bug #129773. Based on ebuild from java-overlay. Hey it's only
+  almost 2 years since Junit-4 was released!
 
   15 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> -junit-3.8.2.ebuild:
   Delete old ebuild.
